test/failing/nolen.trunnel

struct x {
  u8 tag;
  union u[tag] {
    1: u8 a;
      ...;
  };
}
